--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="container">
     <nav>
-      <img src="/assets/images/logo.svg" alt="logo" />
+      <img class="logo" src="/assets/images/logo.svg" alt="logo" />
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
@@ -51,19 +51,19 @@
         </div>
       </div>
       <div class="retro-pcs">
-        <img src="/assets/images/image-retro-pcs.jpg" alt="retro pc's" />
+        <img class="retro-pcs-img" src="/assets/images/image-retro-pcs.jpg" alt="retro pc's" />
         <span>01</span>
         <h3>Reviving Retro PCs</h3>
         <p>What happens when old PCs are given modern upgrades?</p>
       </div>
       <div class="laptops">
-        <img src="/assets/images/image-top-laptops.jpg" alt="laptops" />
+        <img class="laptops-img" src="/assets/images/image-top-laptops.jpg" alt="laptops" />
         <span>02</span>
         <h3>Top 10 Laptops of 2022</h3>
         <p>Our best picks for various needs and budgets.</p>
       </div>
       <div class="gaming">
-        <img src="/assets/images/image-gaming-growth.jpg" alt="gaming growth" />
+        <img class="gaming-img" src="/assets/images/image-gaming-growth.jpg" alt="gaming growth" />
         <span>03</span>
         <h3>The Growth of Gaming</h3>
         <p>How the pandemic has sparked fresh opportunities.</p>
